--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ header {
     height: 60px;
     width: 100%;
     padding: 15px 0;
-    background-color: brown;
+    background-color: darkgreen;
     color: white;
 }
 
@@ -44,7 +44,7 @@ body {
     display: flex;
     height: 180px;
     position: relative;
-    background-color: pink;
+    
 }
 
 .div-top .top-item {
@@ -69,7 +69,7 @@ body {
 .div-mid {
     display: flex;
     height: auto;
-    background-color: pink;
+    
 }
 
 .div-mid .mid-item {
@@ -91,35 +91,28 @@ body {
     border: solid 5px black;
 }
 #b {
-    background-color: pink;
+    
     width: 10%;
 }
 #c {
-    background-color: pink;
     width: 20%;
 }
 #d {
-    background-color: pink;
     width: 20%;
 }
 #e {
-    background-color: pink;
     width: 20%;
 }
 #f {
-    background-color: pink;
     width: 20%;
 }
 #g {
-    background-color: pink;
     width: 10%;
 }
 #h {
     text-align: right;
 }
-#i {
-    background-color: pink;
-}
+
 #j {
     
     text-align: left;
@@ -129,7 +122,6 @@ body {
     display: flex;
     height: 300px;
     position: relative;
-    background-color: pink;
 }
 
 .div-bottom .bottom-left-item {
@@ -188,12 +180,13 @@ table td {
 
 footer{
     width: 100%;
-    height: 100px;
-    background-color: brown;
+    height: 50px;
+    background-color: darkgreen;
     color: white;
     padding-top: 1em;
     text-align: center;
-    font-family: "Noto Sans JP", sans-serif;
+    font-family: "Garamond", "Noto Sans JP", sans-serif;
+    font-size: 20px;
     font-weight: 100;
 }
 
