--- a/style.css
+++ b/style.css
@@ -88,6 +88,10 @@ body {
     opacity:0.7; filter:alpha(opacity=70);
 }
 
+#im-p-0 {
+    visibility: visible;
+}
+
 #a {
     background-color: white;
     font-weight:bold;
@@ -180,6 +184,39 @@ table td {
 .result-table img {
     width: 100%;
     height: 100%;
+}
+
+#next-or-result button {
+    margin-top: 5%;
+}
+
+#next {
+    visibility: hidden;
+}
+
+/* ボタンのスタイル */
+button {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+
+    /* 整える */
+    margin: auto; /* 前後の隙間 */
+    padding: 0.6em 2em; /* 塗りの余白 */
+    font-size: 1.3em; /* フォントサイズ */
+    font-family: "Shippori Mincho", "Noto Sans JP", sans-serif;
+    font-weight: 800 400;
+    background-color: green; /* 背景色 */
+    color: #FFF; /* テキストカラー */
+    cursor: pointer; /* カーソルを指マークに */
+    border-radius: 3px; /* 角の丸み */
+    border: 0; /* 枠線を消す */
+    transition: 0.3s; /* ホバーの変化を滑らかに */
+}
+  
+/* ボタンのホバー時の設定 */
+button:hover {
+    background-color: darkgreen; /* 背景色 */
 }
 
 footer{
