--- a/style.css
+++ b/style.css
@@ -70,6 +70,23 @@ body {
     display: flex;
     height: auto;
     margin-top: 30px;
+    position: relative;
+}
+
+.div-mid #modal-content-result{
+    z-index: 1;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    height: 100%;
+    width: 50%;
+    background-color: white;
+    border: solid 5px black;
+    color: black;
+    text-align: center;
+    padding: 2.5% 5%;
+    visibility: hidden;
 }
 
 .div-mid .mid-item {
