--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
 /* 全体の設定 */
 * {
-    margin:0; padding:0;
-  }
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    max-width: 100%;
+    box-sizing: border-box;
+}
+
+/* サイト全体のフォント指定 */
+body {
+    font-family: "Garamond", "Shippori Mincho", "Noto Sans JP", sans-serif;
+    font-weight: 800 400;
+    background-image: url(./materials/processed/background/tatami.jpg);
+    background-size: cover;
+    overflow-x: hidden;
+}
 
 /* ヘッダーの設定 */
 header {
@@ -10,192 +23,106 @@ header {
     padding: 15px 0;
     background-color: darkgreen;
     color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-header .headline{
-    line-height: 50px;
-    float: left;
-    font-size: 50px;
-    margin-left: 100px;
+header .headline {
+    font-size: 30px;
+    margin-left: 20px;
+    flex-grow: 1;
 }
 
-/*ヘッダー右部のリスト(タイトルへ・クレジット など) */
 .nav-list {
-    line-height: 50px;
-    float: right;
-    margin-right: 80px;
-    list-style: none;
+    display: flex;
+    margin-right: 20px;
 }
 
 .nav-list-item {
-    list-style: none;
-    display: inline-block;
     margin: 0 10px;
 }
 
-/* サイト全体のフォント指定 */
-body {
-    font-family: "Garamond", "Shippori Mincho", "Noto Sans JP", sans-serif;
-    font-weight: 800 400;
-    background-image : url(./materials/processed/background/tatami.jpg);
-}
-
-.div-top{
+/* トップ部分の設定 */
+.div-top {
     display: flex;
-    height: 180px;
-    position: relative;
-    
+    height: 125px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .div-top .top-item {
-    width: 60%;
-    height: 30%;
-    text-align: center;
-    padding: 1% 2%;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
+    width: 50%;
+    box-sizing: border-box;
     display: flex;
-    align-items: center; /* 文字左右中央寄せ */
-    justify-content: center; /* 文字上下中央寄せ */
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
-.div-top .title{
-    font-size: 400%; 
-    text-align: center;    
+.div-top .title {
+    font-size: 2rem;
+    background-color: white;
+    border: 2px solid black;
+    padding: 10px;
+    box-sizing: border-box;
+    width: 100%;
 }
 
+/* ミッド部分の設定 */
 .div-mid {
     display: flex;
-    height: auto;
-    margin-top: 30px;
-    position: relative;
+    justify-content: center;
+    margin-top: 10px;
+    flex-wrap: nowrap;
 }
 
-.div-mid #modal-content-result{
-    z-index: 1;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
-    height: 100%;
-    width: 50%;
-    background-color: white;
-    border: solid 5px black;
-    color: black;
-    text-align: center;
-    padding: 2.5% 5%;
-    visibility: hidden;
-}
-
-
-.div-mid #modal-content-rule{
-    z-index: 2;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
-    height: 100%;
-    width: 50%;
-    background-color: white;
-    border: solid 5px black;
-    color: black;
-    text-align: center;
-    padding: 2.5% 5%;
-    visibility: hidden;
-}
-
-.div-mid .mid-item {
-    width: 10%;
-    height: 100%;
-    padding: 1% 2%;
-    box-sizing: border-box; /* padding, border をwidth, height の計算に考慮しないようにする */
-    text-align: center; /* 画像中央寄せ */
-}
-
-.div-mid .mid-item input {
-    width: 80%;
-}
-
-.div-mid .mid-item input:hover {
-    opacity:0.7; filter:alpha(opacity=70);
-}
-
-#im-p-0 {
-    visibility: visible;
-}
-
-#a {
-    background-color: white;
-    font-weight:bold;
-    border: solid 5px black;
-}
-#b {
-    
-    width: 15%;
-}
-#c {
-    width: 17.5%;
-}
-#d {
-    width: 17.5%;
-}
-#e {
-    width: 17.5%;
-}
-#f {
-    width: 17.4%;
-}
-#g {
-    width: 15%;
-}
-#h {
-    text-align: right;
-}
-
-#j {
-    
-    text-align: left;
-}
-
-.div-bottom{
+.mid-row {
     display: flex;
-    height: 300px;
-    position: relative;
+    flex-direction: row; /* 横並び */
+    justify-content: center;
+    width: auto;
+}
+
+.mid-item {
+    width: auto;
+    margin: 0 20px; /* アイテム間のマージン */
+    text-align: center;
+}
+
+.mid-item input {
+    width: 90%;
+    max-width: calc(100% - 50px);
+}
+
+/* ボトム部分の設定 */
+.div-bottom {
+    display: flex;
+    justify-content: space-between;
     margin-top: 20px;
 }
 
-.div-bottom .bottom-left-item {
+.bottom-row {
+    width: 100%;
+    display: flex;
+    flex-direction: row; /* 横並び */
+    justify-content: center;
+}
+
+.bottom-left-item, .bottom-right-item {
     width: 25%;
-    height: auto;
-    
-    position: absolute;
-}
-
-.div-bottom .bottom-left-item img,
-.div-bottom .bottom-right-item img {
-    height: 300px;
-}
-
-
-.div-bottom .bottom-item {
-    width: 40%;
-    height: 50%;
     text-align: center;
-    padding: 1% 2%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
-.div-bottom .bottom-right-item {
-    width: 25%;
-    height: 300px;
-    position: absolute;
-    top: 0%;
-    right: 0%;
+.bottom-item {
+    width: 100%;
+    text-align: center;
+}
+
+.bottom-left-item img, .bottom-right-item img {
+    width: 100%;
+    height: auto;
 }
 
 table {
@@ -220,51 +147,8 @@ table td {
     height: 100%;
 }
 
-#next-or-result button {
-    margin-top: 5%;
-}
-
-#next {
-    visibility: hidden;
-}
-
-/* ボタンのスタイル */
-button {
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    appearance: none;
-
-    /* 整える */
-    margin: auto; /* 前後の隙間 */
-    
-    font-size: 1.3em; /* フォントサイズ */
-    font-family: "Shippori Mincho", "Noto Sans JP", sans-serif;
-    font-weight: 800 400;
-    background-color: green; /* 背景色 */
-    color: #FFF; /* テキストカラー */
-    cursor: pointer; /* カーソルを指マークに */
-    border-radius: 3px; /* 角の丸み */
-    border: 0; /* 枠線を消す */
-    transition: 0.3s; /* ホバーの変化を滑らかに */
-}
-#restart  {
-    padding: 0.6em 1.1em;
-}
-
-#modal-open-rule {
-    padding: 0.6em 2em;
-}
-#next,
-#result {
-    padding: 0.6em 2em;   
-}
-  
-/* ボタンのホバー時の設定 */
-button:hover {
-    background-color: darkgreen; /* 背景色 */
-}
-
-footer{
+/* フッターの設定 */
+footer {
     width: 100%;
     height: 35px;
     background-color: darkgreen;
@@ -276,6 +160,146 @@ footer{
     font-weight: 300;
 }
 
-ul.footer-menu li {
-    display: inline;
+/* ボタンのスタイル */
+button {
+    appearance: none;
+    margin: auto;
+    font-size: 1.3em;
+    font-family: "Shippori Mincho", "Noto Sans JP", sans-serif;
+    font-weight: 800 400;
+    background-color: green;
+    color: #FFF;
+    cursor: pointer;
+    border-radius: 3px;
+    border: 0;
+    transition: 0.3s;
+    padding: 0.6em 1.1em;
+}
+
+button:hover {
+    background-color: darkgreen;
+}
+
+/* モーダル背景のスタイル */
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* 半透明の黒 */
+    z-index: 999; /* モーダルより手前に表示 */
+    display: none; /* 初期状態では非表示 */
+}
+
+/* ルールダイアログのスタイル */
+.modal-content {
+    position: fixed;
+    top: 50%; /* 縦方向の中央に表示する */
+    left: 50%; /* 横方向の中央に表示する */
+    transform: translate(-50%, -50%); /* 真ん中に配置するために調整 */
+    z-index: 1000; /* 一番手前に表示する */
+    background-color: white; /* 背景色を白に設定 */
+    padding: 20px; /* 内側の余白を追加 */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 影を追加して浮き上がらせる */
+    display: none; /* 初期状態では非表示 */
+    width: 90%;
+    border: 2px solid black;
+}
+
+/* ハンバーガーメニューのスタイル */
+.hamburger-menu {
+    display: none;
+    font-size: 30px;
+    cursor: pointer;
+    margin-right: 20px;
+    padding: 0; /* 不要なパディングを削除 */
+}
+
+@media (min-width: 461px) {
+    .modal-content {
+        width: 60%; /* PCでは横幅が画面の60%になるようにする */
+    }
+}
+
+@media (max-width: 460px) {
+    header {
+        flex-direction: row;
+        height: auto;
+        padding: 10px;
+    }
+    header h1 a{
+        font-size: 70%;
+    }
+
+    .headline {
+        margin: 0;
+        font-size: 20px;
+    }
+    .nav-list {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        margin: 20px 0;
+    }
+
+    .nav-list-item {
+        margin: 10px 0;
+    }
+
+    .hamburger-menu {
+        display: block;
+        margin-right: 20px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .nav-list.active {
+        display: flex;
+    }
+
+    .div-top .top-item {
+        width: 66%;
+    }
+
+    .div-top .title {
+        font-size: 1.5rem;
+        padding: 10px;
+    }
+
+    .div-mid {
+        flex-direction: column;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .mid-row {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .mid-item {
+        width: 45%;
+        margin: 5px;
+    }
+
+    .mid-item input {
+        max-width: calc(100% - 10px);
+    }
+
+    .div-bottom {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .bottom-left-item, .bottom-right-item, .bottom-item {
+        width: 100%;
+        margin: 10px 0;
+    }
+
+    .bottom-left-item img, .bottom-right-item img {
+        height: auto;
+    }
 }
