--- a/footer.css
+++ b/footer.css
@@ -63,7 +63,7 @@ footer {
 }
 
 /* ボタンのスタイル */
-button {
+.btn {
     appearance: none;
     margin: auto;
     font-size: 1.3em;
@@ -78,6 +78,56 @@ button {
     padding: 0.6em 1.1em;
 }
 
-button:hover {
-    background-color: darkgreen;
+.btn:hover {
+    background-color: #FF8C00;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+html {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+.btn,
+a.btn,
+button.btn {
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 1.5;
+  position: relative;
+  display: inline-block;
+  padding: 1rem 4rem;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  text-align: center;
+  vertical-align: middle;
+  text-decoration: none;
+  letter-spacing: 0.1em;
+  color: #212529;
+  border-radius: 0.5rem;
+}
+
+a.btn-malformation {
+  font-size: 2rem;
+  padding: 3rem 4rem;
+  color: #fff;
+  border-radius: 100% 80px / 80px 100%;
+  background-color: #228B22;
+}
+
+a.btn-malformation:hover {
+  color: #fff;
+  border-radius: 60% 80% / 100% 80%;
 }
