--- a/main.css
+++ b/main.css
@@ -96,8 +96,19 @@ body {
     border: 2px solid black;
 }
 
+/* アニメーション用のスタイル */
+@keyframes typewriter {
+    from { width: 0; }
+    to { width: 100%; }
+}
 
-
+#animated-text {
+    display: inline-block;
+    overflow: hidden;
+    white-space: nowrap;
+    border-right: 2px solid black;
+    animation: typewriter 2s steps(30) 1s 1 normal both;
+}
 
 /* メディアクエリでPCとスマートフォン対応 */
 @media (min-width: 461px) {
