--- a/main.css
+++ b/main.css
@@ -19,14 +19,14 @@ body {
 /* トップ部分の設定 */
 .div-top {
     display: flex;
-    height: 125px;
+    height: 162.5px; /* 1.3倍に拡大 */
     justify-content: center;
     align-items: center;
     text-align: center;
 }
 
 .div-top .top-item {
-    width: 50%;
+    width: 65%; /* 1.3倍に拡大 */
     box-sizing: border-box;
     display: flex;
     justify-content: center;
@@ -35,7 +35,7 @@ body {
 }
 
 .div-top .title {
-    font-size: 2rem;
+    font-size: 3rem; /* トム・ブラウンかるたと同じサイズに変更 */
     background-color: white;
     border: 2px solid black;
     padding: 10px;
@@ -119,11 +119,11 @@ body {
 
 @media (max-width: 460px) {
     .div-top .top-item {
-        width: 66%;
+        width: 65%;
     }
 
     .div-top .title {
-        font-size: 1.5rem;
+        font-size: 3rem;
         padding: 10px;
     }
 
@@ -159,6 +159,113 @@ body {
     }
 
     .bottom-left-item img, .bottom-right-item img {
+        width: 90%; /* サイズを大きく調整 */
         height: auto;
     }
+
+    .result-table {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .result-table tr {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .result-table td {
+        width: auto;
+        height: auto;
+        padding: 20px;
+    }
+
+    .result-table img {
+        width: 80%; /* テーブル枠にかぶらない範囲で大きく */
+        height: auto;
+    }
+}
+
+/* フッターの設定 */
+footer {
+    width: 100%;
+    height: 35px;
+    background-color: darkgreen;
+    color: white;
+    padding-top: 15px;
+    text-align: center;
+    font-family: "Roboto Condensed", "Garamond", "Noto Sans JP", sans-serif;
+    font-size: 17px;
+    font-weight: 300;
+    margin-bottom: 0; /* 隙間をなくすために追加 */
+}
+
+/* ボタンのスタイル */
+.btn {
+    appearance: none;
+    margin: auto;
+    font-size: 1.3em;
+    font-family: "Shippori Mincho", "Noto Sans JP", sans-serif;
+    font-weight: 800 400;
+    background-color: green;
+    color: #FFF;
+    cursor: pointer;
+    border-radius: 3px;
+    border: 0;
+    transition: 0.3s;
+    padding: 0.6em 1.1em;
+}
+
+.btn:hover {
+    background-color: #FF8C00;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+html {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+.btn,
+a.btn,
+button.btn {
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 1.5;
+  position: relative;
+  display: inline-block;
+  padding: 1rem 4rem;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  text-align: center;
+  vertical-align: middle;
+  text-decoration: none;
+  letter-spacing: 0.1em;
+  color: #212529;
+  border-radius: 0.5rem;
+}
+
+a.btn-malformation {
+  font-size: 2rem;
+  padding: 3rem 4rem;
+  color: #fff;
+  border-radius: 100% 80px / 80px 100%;
+  background-color: #228B22;
+}
+
+a.btn-malformation:hover {
+  color: #fff;
+  border-radius: 60% 80% / 100% 80%;
 }
