JS分割・ゲームロジックのバグ解消(結果表示部分にバグ残)

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,7 +11,7 @@
 body {
     font-family: "Garamond", "Shippori Mincho", "Noto Sans JP", sans-serif;
     font-weight: 800 400;
-    background-image: url(./materials/processed/background/tatami1.png);
+    background-image: url(../assets/processed/background/tatami1.png);
     background-size: cover;
     overflow-x: hidden;
 }
