--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -55,10 +55,17 @@ footer {
     height: 35px;
     background-color: darkgreen;
     color: white;
-    padding-top: 15px;
     text-align: center;
-    font-family: "Roboto Condensed", "Garamond", "Noto Sans JP", sans-serif;
-    font-size: 17px;
+}
+
+footer.copyright {
+    width: 100%;
+    height: 35px;
+    background-color: darkgreen;
+    color: white;
+    text-align: center;
+    font-family: "Roboto Condensed", "Noto Sans JP", sans-serif;
+    font-size: 15px;
     font-weight: 300;
 }
 
@@ -67,15 +74,15 @@ footer {
     appearance: none;
     margin: auto;
     font-size: 1.3em;
-    font-family: "Shippori Mincho", "Noto Sans JP", sans-serif;
-    font-weight: 800 400;
+    font-family: "Kaisei Tokumin", serif;
+    font-weight: 800 700 600 500 400;
     background-color: green;
     color: #FFF;
     cursor: pointer;
     border-radius: 3px;
     border: 0;
     transition: 0.3s;
-    padding: 0.6em 1.1em;
+    padding: 0.1em 0.1em;
 }
 
 .btn:hover {
@@ -98,12 +105,12 @@ html {
 .btn,
 a.btn,
 button.btn {
-  font-size: 1.6rem;
+  font-size: 2.6rem;
   font-weight: 700;
-  line-height: 1.5;
+  line-height: 100%;
   position: relative;
   display: inline-block;
-  padding: 1rem 4rem;
+  padding: 1rem 1rem;
   cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
