--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,8 +9,8 @@
 
 /* サイト全体のフォント指定 */
 body {
-    font-family: "Garamond", "Shippori Mincho", "Noto Sans JP", sans-serif;
-    font-weight: 800 400;
+    font-family: "Kaisei Tokumin", serif;
+    font-weight: 800 700 600 500 400;
     background-image: url(../assets/processed/background/tatami1.png);
     background-size: cover;
     overflow-x: hidden;
@@ -35,7 +35,7 @@ body {
 }
 
 .div-top .title {
-    font-size: 3rem; /* トム・ブラウンかるたと同じサイズに変更 */
+    font-size: 4rem;
     background-color: white;
     border: 2px solid black;
     padding: 10px;
@@ -196,7 +196,7 @@ footer {
     text-align: center;
     font-family: "Roboto Condensed", "Garamond", "Noto Sans JP", sans-serif;
     font-size: 17px;
-    font-weight: 300;
+    font-weight: 800 700 600 500 400;
     margin-bottom: 0; /* 隙間をなくすために追加 */
 }
 
@@ -205,8 +205,8 @@ footer {
     appearance: none;
     margin: auto;
     font-size: 1.3em;
-    font-family: "Shippori Mincho", "Noto Sans JP", sans-serif;
-    font-weight: 800 400;
+    font-family: "Kaisei Tokumin", serif;
+    font-weight: 800 700 600 500 400;
     background-color: green;
     color: #FFF;
     cursor: pointer;
@@ -242,6 +242,127 @@ button.btn {
   position: relative;
   display: inline-block;
   padding: 1rem 4rem;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  text-align: center;
+  vertical-align: middle;
+  text-decoration: none;
+  letter-spacing: 0.1em;
+  color: #212529;
+  border-radius: 0.5rem;
+}
+
+a.btn-malformation {
+  font-size: 2rem;
+  padding: 3rem 4rem;
+  color: #fff;
+  border-radius: 100% 80px / 80px 100%;
+  background-color: #228B22;
+}
+
+a.btn-malformation:hover {
+  color: #fff;
+  border-radius: 60% 80% / 100% 80%;
+}
+
+/* ボトム部分の設定 */
+.div-bottom {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.bottom-row {
+    width: 100%;
+    display: flex;
+    flex-direction: row; /* 横並び */
+    justify-content: center;
+}
+
+.bottom-left-item, .bottom-right-item {
+    width: 25%;
+    text-align: center;
+}
+
+.bottom-item {
+    width: 100%;
+    text-align: center;
+}
+
+.bottom-left-item img, .bottom-right-item img {
+    width: 100%;
+    height: auto;
+}
+
+table {
+    width: 100%;
+    height: 40%;
+    border-collapse: collapse;
+    border: solid 5px black;
+    background-color: white;
+}
+table th, table td {
+    border: solid 2px black;
+}
+
+table td {
+    width: 20px;
+    height: 40px;
+    padding: 10px 10px;
+}
+
+.result-table img {
+    width: 100%;
+    height: 100%;
+}
+
+/* ボタンのスタイル */
+.btn {
+    appearance: none;
+    margin: auto;
+    font-size: 1.3em;
+    font-family: "Kaisei Tokumin", serif;
+    font-weight: 800 700 600 500 400;
+    background-color: green;
+    color: #FFF;
+    cursor: pointer;
+    border-radius: 3px;
+    border: 0;
+    transition: 0.3s;
+    padding: 0.1em 0.1em;
+}
+
+.btn:hover {
+    background-color: #FF8C00;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+html {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+.btn,
+a.btn,
+button.btn {
+  font-size: 2.6rem;
+  font-weight: 700;
+  line-height: 100%;
+  position: relative;
+  display: inline-block;
+  padding: 1rem 1rem;
   cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
