--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,61 +1,15 @@
-/* ボトム部分の設定 */
-.div-bottom {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-}
-
-.bottom-row {
-    width: 100%;
-    display: flex;
-    flex-direction: row; /* 横並び */
-    justify-content: center;
-}
-
-.bottom-left-item, .bottom-right-item {
-    width: 25%;
-    text-align: center;
-}
-
-.bottom-item {
-    width: 100%;
-    text-align: center;
-}
-
-.bottom-left-item img, .bottom-right-item img {
-    width: 100%;
-    height: auto;
-}
-
-table {
-    width: 100%;
-    height: 40%;
-    border-collapse: collapse;
-    border: solid 5px black;
-    background-color: white;
-}
-table th, table td {
-    border: solid 2px black;
-}
-
-table td {
-    width: 20px;
-    height: 40px;
-    padding: 10px 10px;
-}
-
-.result-table img {
-    width: 100%;
-    height: 100%;
-}
-
 /* フッターの設定 */
 footer {
     width: 100%;
     height: 35px;
     background-color: darkgreen;
     color: white;
+    padding-top: 15px;
     text-align: center;
+    font-family: "Roboto Condensed", "Garamond", "Noto Sans JP", sans-serif;
+    font-size: 17px;
+    font-weight: 800 700 600 500 400;
+    margin-bottom: 0; /* 隙間をなくすために追加 */
 }
 
 footer.copyright {
@@ -69,72 +23,3 @@ footer.copyright {
     font-weight: 300;
 }
 
-/* ボタンのスタイル */
-.btn {
-    appearance: none;
-    margin: auto;
-    font-size: 1.3em;
-    font-family: "Kaisei Tokumin", serif;
-    font-weight: 800 700 600 500 400;
-    background-color: green;
-    color: #FFF;
-    cursor: pointer;
-    border-radius: 3px;
-    border: 0;
-    transition: 0.3s;
-    padding: 0.1em 0.1em;
-}
-
-.btn:hover {
-    background-color: #FF8C00;
-}
-
-*,
-*:before,
-*:after {
-  -webkit-box-sizing: inherit;
-  box-sizing: inherit;
-}
-
-html {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  font-size: 62.5%;
-}
-
-.btn,
-a.btn,
-button.btn {
-  font-size: 2.6rem;
-  font-weight: 700;
-  line-height: 100%;
-  position: relative;
-  display: inline-block;
-  padding: 1rem 1rem;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  text-align: center;
-  vertical-align: middle;
-  text-decoration: none;
-  letter-spacing: 0.1em;
-  color: #212529;
-  border-radius: 0.5rem;
-}
-
-a.btn-malformation {
-  font-size: 2rem;
-  padding: 3rem 4rem;
-  color: #fff;
-  border-radius: 100% 80px / 80px 100%;
-  background-color: #228B22;
-}
-
-a.btn-malformation:hover {
-  color: #fff;
-  border-radius: 60% 80% / 100% 80%;
-}
