--- a/public/css/button.css
+++ b/public/css/button.css
@@ -1,112 +1,55 @@
-/* ボタンのスタイル */
-.btn {
-    appearance: none;
-    margin: auto;
-    font-size: 1.3em;
-    font-family: "Kaisei Tokumin", serif;
-    font-weight: 800 700 600 500 400;
-    background-color: green;
-    color: #FFF;
-    cursor: pointer;
-    border-radius: 3px;
-    border: 0;
-    transition: 0.3s;
-    padding: 0.6em 1.1em;
-}
-
-.btn:hover {
-    background-color: #FF8C00;
-}
-
+/* 基本のボタンスタイル */
 .btn,
 a.btn,
 button.btn {
-  font-size: 1.6rem;
-  font-weight: 700;
-  line-height: 1.5;
-  position: relative;
-  display: inline-block;
-  padding: 1rem 4rem;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  text-align: center;
-  vertical-align: middle;
-  text-decoration: none;
-  letter-spacing: 0.1em;
-  color: #212529;
-  border-radius: 0.5rem;
-}
-
-a.btn-malformation {
-  font-size: 2rem;
-  padding: 3rem 4rem;
-  color: #fff;
-  border-radius: 100% 80px / 80px 100%;
-  background-color: #228B22;
-}
-
-a.btn-malformation:hover {
-  color: #fff;
-  border-radius: 60% 80% / 100% 80%;
-}
-/* ボタンのスタイル */
-.btn {
     appearance: none;
     margin: auto;
-    font-size: 1.3em;
     font-family: "Kaisei Tokumin", serif;
-    font-weight: 800 700 600 500 400;
+    font-weight: 700;
     background-color: green;
     color: #FFF;
     cursor: pointer;
-    border-radius: 3px;
+    border-radius: 0.5rem; /* 統一された角の丸み */
     border: 0;
-    transition: 0.3s;
-    padding: 0.1em 0.1em;
+    transition: all 0.3s;
+    position: relative;
+    display: inline-block;
+    user-select: none;
+    text-align: center;
+    vertical-align: middle;
+    text-decoration: none;
+    letter-spacing: 0.1em;
+    padding: 0.6em 1.1em; /* デフォルトのパディング */
 }
 
-.btn:hover {
+.btn:hover,
+a.btn:hover,
+button.btn:hover {
     background-color: #FF8C00;
 }
 
-.btn,
-a.btn,
-button.btn {
-  font-size: 2.6rem;
-  font-weight: 700;
-  line-height: 100%;
-  position: relative;
-  display: inline-block;
-  padding: 1rem 1rem;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  text-align: center;
-  vertical-align: middle;
-  text-decoration: none;
-  letter-spacing: 0.1em;
-  color: #212529;
-  border-radius: 0.5rem;
+.btn {
+    font-size: 1.3em; /* デフォルトのフォントサイズ */
 }
 
+a.btn,
+button.btn {
+    font-size: 1.6rem;
+    line-height: 1.5;
+    padding: 1rem 4rem; /* 調整されたパディング */
+    color: #212529;
+}
+
+/* 特定のスタイルを持つボタン */
 a.btn-malformation {
-  font-size: 2rem;
-  padding: 3rem 4rem;
-  color: #fff;
-  border-radius: 100% 80px / 80px 100%;
-  background-color: #228B22;
+    font-size: 2rem;
+    padding: 3rem 4rem;
+    color: #fff;
+    border-radius: 100% 80px / 80px 100%;
+    background-color: #228B22;
 }
 
 a.btn-malformation:hover {
-  color: #fff;
-  border-radius: 60% 80% / 100% 80%;
+    color: #fff;
+    border-radius: 60% 80% / 100% 80%;
 }
