--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,3 @@
-
 /* トップ部分の設定 */
 .div-top {
     display: flex;
@@ -6,6 +5,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    gap: 20px; /* title と elapsed-time の間に間隔を追加 */
 }
 
 .div-top .top-item {
@@ -52,7 +52,6 @@
     max-width: calc(100% - 50px);
 }
 
-
 #animated-text {
     display: inline-block;
     overflow: hidden;
@@ -60,7 +59,6 @@
     border-right: 2px solid black;
     animation: typewriter 2s steps(30) 1s 1 normal both;
 }
-
 
 /* ボトム部分の設定 */
 .div-bottom {
